Fix css issue on firefox

--- a/css/demo.css
+++ b/css/demo.css
@@ -2,7 +2,6 @@ body {
     padding: 0;
     margin: 0;
     font-family: "Helvetica Neue", "Helvetica", sans-serif;
-    font-weight: 200;
     color: #333;
     min-width: 320px;
 }
@@ -30,7 +29,7 @@ img {
 }
 
 h1, h2 {
-    font-weight: 200;
+    font-weight: 400;
     text-align: center;
     padding: 0 20px;
     line-height: 0.85;
@@ -69,7 +68,14 @@ a {
     margin-bottom: 15px;
 }
 
-.intro .btn:hover {
+.intro .btn:hover,
+.intro .btn:active {
+  background: black;
+  border-color: black;
+  color: white;
+}
+
+.intro .btn:focus {
   text-decoration: underline;
   border-color: #333;
 }
